# SQLAlchemyMagic

./: .gitignore  README.md  pyproject.toml
alchemy_magic/src/: __init__.py
alchemy_magic/src/database/base/: __init__.py
alchemy_magic/src/database/decorators/: session.py
alchemy_magic/src/database/fastapi_dependency/: magic_manager.py
alchemy_magic/src/sqlalchemy_magic/database/base/: init.py
alchemy_magic/src/sqlalchemy_magic/database/fastapi_dependency/: magic_manager.py
alchemy_magic/src/sqlalchemymagic/database/: magic_runtime.py
alchemy_magic/src/sqlalchemymagic/database/base/: manager.py  mixin.py
alchemy_magic/src/sqlalchemymagic/database/fastapi_dependency/: magic_manager.py
alchemy_magic/tests/: test_database.py
