[tool.poetry]
name = "sqlalchemymagic"
version = "0.1.0"
description = "Utilities for configuring SQLAlchemy sessions and FastAPI dependencies."
authors = ["peyro <peyrovskaaa@gmail.com>"]
readme = "README.md"
packages = [{ include = "sqlalchemymagic", from = "src" }]
keywords = ["sqlalchemy", "fastapi", "async", "database"]
license = "MIT"
repository = "https://github.com/y2k0py/SQLAlchemyMagic"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
sqlalchemy = ">=2.0.43,<3.0.0"
aiosqlite = ">=0.21.0,<0.22.0"
fastapi = ">=0.118.0,<0.119.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
pytest-asyncio = ">=1.2.0,<2.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
